--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Send Cookies</title>
+    <meta charset="UTF-8" />
+    <title>Instagram Bot</title>
     <style>
-      body { font-family: Arial; padding: 10px; width: 250px; }
-      input, button { width: 100%; margin-top: 10px; }
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: 'Segoe UI', Roboto, sans-serif;
+        background-color: #fafafa;
+        color: #262626;
+        padding: 20px;
+        width: 300px;
+        border-radius: 10px;
+      }
+
+      h3 {
+        text-align: center;
+        margin-bottom: 10px;
+        font-weight: 600;
+      }
+
+      p.description {
+        font-size: 14px;
+        text-align: center;
+        color: #737373;
+        margin-bottom: 20px;
+      }
+
+      #actionLabelContainer {
+        background: #f1f1f1;
+        border-radius: 6px;
+        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        text-align: center;
+        color: #333;
+        font-weight: 500;
+      }
+
+      button {
+        background-color: #3897f0;
+        color: white;
+        border: none;
+        padding: 10px 16px;
+        font-size: 14px;
+        font-weight: 600;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        width: 100%;
+      }
+
+      button:hover {
+        background-color: #318ce7;
+      }
+
+      #status {
+        margin-top: 15px;
+        font-size: 13px;
+        text-align: center;
+        color: #008000;
+        word-break: break-word;
+      }
     </style>
   </head>
   <body>
-    <h3>Instagram Bot</h3>
-    <label>Bearer Token (DEV)</label>
-    <input type="text" id="token" placeholder="Paste token here">
-    <label>Environment</label>
-    <select id="env">
-      <option value="local">Local</option>
-      <option value="production">Production</option>
-    </select>
-    <button id="sendBtn">Send to Bot</button>
+    <h3>📤 Instagram Bot</h3>
+    <p class="description">
+      Navigate to your IG profile and press the button below.
+    </p>
+
+    <div id="actionLabelContainer">
+        <strong>Selected Action:</strong>
+        <div id="actionLabel" style="font-size: 14px; margin-top: 6px;"></div>
+    </div>
+
+    <button id="sendBtn">🚀 Send to Bot</button>
     <div id="status"></div>
 
     <script src="popup.js"></script>
