--- a/popup.html
+++ b/popup.html
@@ -1,87 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Instagram Bot</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Instagram Bot</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-      body {
-        font-family: 'Segoe UI', Roboto, sans-serif;
-        background-color: #fafafa;
-        color: #262626;
-        padding: 20px;
-        width: 300px;
-        border-radius: 10px;
-      }
+    body {
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      background-color: #fafafa;
+      color: #262626;
+      padding: 20px;
+      width: 300px;
+      border-radius: 10px;
+    }
 
-      h3 {
-        text-align: center;
-        margin-bottom: 10px;
-        font-weight: 600;
-      }
+    h3 {
+      text-align: center;
+      margin-bottom: 10px;
+      font-weight: 600;
+    }
 
-      p.description {
-        font-size: 14px;
-        text-align: center;
-        color: #737373;
-        margin-bottom: 20px;
-      }
+    p.description {
+      font-size: 14px;
+      text-align: center;
+      color: #737373;
+      margin-bottom: 20px;
+    }
 
-      #actionLabelContainer {
-        background: #f1f1f1;
-        border-radius: 6px;
-        padding: 10px;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        font-size: 14px;
-        text-align: center;
-        color: #333;
-        font-weight: 500;
-      }
+    #actionLabelContainer {
+      background: #f1f1f1;
+      border-radius: 6px;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-size: 14px;
+      text-align: center;
+      color: #333;
+      font-weight: 500;
+    }
 
-      button {
-        background-color: #3897f0;
-        color: white;
-        border: none;
-        padding: 10px 16px;
-        font-size: 14px;
-        font-weight: 600;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: background-color 0.2s ease;
-        width: 100%;
-      }
+    button {
+      background-color: #3897f0;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      font-size: 14px;
+      font-weight: 600;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+      width: 100%;
+    }
 
-      button:hover {
-        background-color: #318ce7;
-      }
+    button:hover {
+      background-color: #318ce7;
+    }
 
-      #status {
-        margin-top: 15px;
-        font-size: 13px;
-        text-align: center;
-        color: #008000;
-        word-break: break-word;
-      }
-    </style>
-  </head>
-  <body>
-    <h3>📤 Instagram Bot</h3>
-    <p class="description">
-      Navigate to your IG profile and press the button below.
-    </p>
+    #status {
+      margin-top: 15px;
+      font-size: 13px;
+      text-align: left;
+      color: #333;
+      background: #eee;
+      padding: 10px;
+      border-radius: 6px;
+      max-height: 160px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
 
-    <div id="actionLabelContainer">
-        <strong>Selected Action:</strong>
-        <div id="actionLabel" style="font-size: 14px; margin-top: 6px;"></div>
-    </div>
+    #loading {
+      display: none;
+      margin-top: 16px;
+      text-align: center;
+      color: #555;
+    }
 
-    <button id="sendBtn">🚀 Send to Bot</button>
-    <div id="status"></div>
+    .loader {
+      margin: 6px auto;
+      width: 24px;
+      height: 24px;
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #4CAF50;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
 
-    <script src="popup.js"></script>
-  </body>
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
+</head>
+<body>
+  <h3>📤 Instagram Bot</h3>
+  <p class="description">
+    Navigate to your IG profile and press the button below.
+  </p>
+
+  <div id="actionLabelContainer">
+    <strong>Selected Action:</strong>
+    <div id="actionLabel" style="font-size: 14px; margin-top: 6px;"></div>
+  </div>
+
+  <button id="sendBtn">🚀 Send to Bot</button>
+
+  <div id="loading">
+    <span>🤖 Bot is running... please wait</span>
+    <div class="loader"></div>
+  </div>
+
+  <pre id="status"></pre>
+
+  <script src="popup.js"></script>
+</body>
 </html>
