fixed script excuting twice, added config.js for envirnoment based url.

--- a/popup.html
+++ b/popup.html
@@ -94,6 +94,8 @@
       100% { transform: rotate(360deg); }
     }
   </style>
+  <script src="config.js"></script>
+  <script src="popup.js"></script>
 </head>
 <body>
   <h3>📤 Instagram Bot</h3>
@@ -114,7 +116,5 @@
   </div>
 
   <pre id="status"></pre>
-
-  <script src="popup.js"></script>
 </body>
 </html>
